# qiskit-calculquebec

./: .gitignore  .readthedocs.yaml  README.md  monarq_backend.py  monarq_data.py  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml  implementation_issue.yml
.github/workflows/: draft-release.yml  lint.yml  pypi-publish.yml  python-publish.yml  unit-test.yml
API/: adapter.py  api_utility.py  job.py
docs/: conf.py  getting_started.ipynb  index.rst  mitigation_example.ipynb  requirements.txt
docs/FR/: README_FR.md  mitigation_exemple.ipynb  prise_en_main.ipynb
docs/_templates/autosummary/: class.rst  module.rst
docs/adr/: choose-documentation-pipeline.md
docs/rtd/: code_ref.rst
qiskit_calculquebec/: monarq_backend.py  monarq_data.py  qiskit_circuit_example.py
qiskit_calculquebec/API/: __init__.py  adapter.py  api_utility.py  client.py  job.py  retry_decorator.py
qiskit_calculquebec/backends/: __init__.py  anyon_backend.py  monarq_backend.py
qiskit_calculquebec/backends/targets/: anyon_target.py  monarq.py  yukon.py
qiskit_calculquebec/backends/utils/: job.py
qiskit_calculquebec/custom_gates/: ry_90_gate.py  ry_m90_gate.py
qiskit_calculquebec/mitigation/: __init__.py  ddd.py  pauli_twirling.py  readout.py  zne.py
qiskit_calculquebec/provider/: provider.py
qiskit_calculquebec/transpiler/: __init__.py  customGates.py  equivalenceRules.py  monarqPassManager.py  monarqTarget.py  transpiler_utility.py
tests/: test_qiskit.py
tests/API/: test_api_adapter.py  test_api_retry.py  test_api_utility.py  test_job.py
tests/backends/: test_monarq_backend.py
tests/mitigation/: test_ddd.py  test_pauli_twirling.py  test_readout.py  test_zne.py
transpiler/: __init__.py  customGates.py  monarqPassManager.py  monarqTarget.py
(+2 files in other folders)
