[project]
name = "qiskit-calculquebec"
dynamic = ["version"]
description = "Custom Qiskit backend and provider for Calcul Québec."
maintainers = [
    { name = "Calcul Québec", email = "support@tech.alliancecan.ca" },
]
readme = "README.md"
license-files = ["LICENCE"]
requires-python = ">=3.8"
dependencies = [
    "qiskit>=2.0.0",
    "numpy>=1.21.0"
]

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qiskit_calculquebec"]

[tool.setuptools.package-data]
qiskit_calculquebec = ["custom_gates/*.py", "API/*.py", "provider/*.py", "transpiler/*.py", "backends/*.py"]

[tool.setuptools.exclude-package-data]
qiskit_calculquebec = ["tests/*"]

[tool.setuptools_scm]
version_file = "qiskit_calculquebec/_version.py"